--- a/appsettings.json
+++ b/appsettings.json
@@ -16,6 +16,6 @@
     "ExpiresInHours": 24
   },
   "Cors": {
-    "AllowedOrigins": "http://localhost:3000,http://localhost:5173"
+    "AllowedOrigins": "https://pet-safe-fe.vercel.app,http://localhost:3000,http://localhost:5173"
   }
 }
